[package]
name = "roku"
version = "0.1.2"
authors = ["Carlo Abelli <carlo@abelli.me>"]
edition = "2018"
license = "MIT"
description = "Rust wrapper around the Roku API"
repository = "https://github.com/carloabelli/roku"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = [ "derive" ] }
serde-xml-rs = "0.4"
ssdp-client = "1.0"
thiserror = "1.0"
url = "2.2"
